unpackaged/main/default/objects/CMPL123QMS__Part_Information__c/CMPL123QMS__Part_Information__c.object-meta.xml
<CustomObject>
    <label>Part Information</label>
    <nameField>
        <displayFormat>NO-{0000}</displayFormat>
        <label>Part-Doc No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>