unpackaged/main/default/objects/CMPL123QMS__Part_Information__c/fields/CMPL123QMS__Current_Revision__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Current_Revision__c</fullName>
        <label>Current Revision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>