unpackaged/main/default/objects/CMPL123QMS__Part_Information__c/fields/CMPL123QMS__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>