unpackaged/main/default/objects/CMPL123QMS__Part_Information__c/fields/CMPL123QMS__Part_or_Document_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Part_or_Document_No__c</fullName>
        <externalId>true</externalId>
        <label>Part or Document No</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>