unpackaged/main/default/objects/CMPL123QMS__Part_Information__c/recordTypes/CMPL123QMS__Document.recordType-meta.xml
<RecordType>
        <fullName>CMPL123QMS__Document</fullName>
        <active>true</active>
        <label>Document</label>
    </RecordType>