unpackaged/main/default/objects/CMPL123QMS__Part_Information__c/recordTypes/CMPL123QMS__Part.recordType-meta.xml
<RecordType>
        <fullName>CMPL123QMS__Part</fullName>
        <active>true</active>
        <label>Part</label>
    </RecordType>