unpackaged/main/default/objects/CMPL123QMS__Part_Information__c/listViews/CMPL123QMS__All.listView-meta.xml
<ListView>
        <fullName>CMPL123QMS__All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Part_or_Document_No__c</columns>
        <columns>CMPL123QMS__Description__c</columns>
        <columns>CMPL123QMS__Current_Revision__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>